src/layouts/Modeling/ModelingLeftSider/LeftSider.module.scss
.outerLayout {
  min-height: 100vh;
  position: "fixed";
}

.leftSider {
  z-index: 5;
  background-color: rgba(240, 245, 255, 0.9);
  height: calc(100vh - 64px);
  position: fixed;
  left: 75px;
  top: 64px;
}

.upperPart {
  position: 'fixed';
  background-color: rgba(255, 255, 255, 0);
  height: calc(100vh - 124px);
}

.wrapperCard {
  background-color: #f9f9f9;
  min-height: 100%;
}

.lowerPart {
  position: "fixed";
  height: 60px;
  background-color: #1f1f1f;
  bottom: 0;
}

.collapseButton {
  z-index: 6;
  position: "relative";
  left: -12.5px;
  top: 50vh;
}

